--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,6 +5,9 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Appzeto - Single Vendor E-commerce</title>
+    <!-- Preload critical hero images for faster LCP -->
+    <link rel="preload" as="image" href="/images/hero/slide1.png" fetchpriority="high" />
+    <link rel="preload" as="image" href="/images/hero/slide2.png" />
   </head>
   <body>
     <div id="root"></div>
